--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     hooks:
       - id: black
         name: black
-        entry: black semente semente_cli tests
+        entry: black .
         language: system
         types: [ python ]
         require_serial: true
@@ -11,7 +11,7 @@ repos:
 
       - id: flake8
         name: flake8
-        entry: flake8 semente semente_cli tests
+        entry: flake8 .
         language: system
         types: [ python ]
         require_serial: true
@@ -27,7 +27,7 @@ repos:
 
       - id: isort
         name: isort
-        entry: isort semente semente_cli tests
+        entry: isort .
         language: system
         types: [ python ]
         require_serial: true
