--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,7 @@ repos:
 
       - id: flake8
         name: flake8
-        entry: flake8 .
+        entry: flake8 models
         language: system
         types: [ python ]
         require_serial: true
