--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -33,7 +33,7 @@
             "justMyCode": true,
             "args": [
                 "--experiment",
-                "mert95m_l2p_cl_gtzan_scenario1 "
+                "mert95m_l2p_cl_gtzan_scenario1",
             ]
         }
     ]
