--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,15 +6,15 @@
     "configurations": [
         {
             "name": "Python: Current File",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "justMyCode": true
+            "justMyCode": false
         },
         {
             "name": "Execute experiment check",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "execute_experiment_check.py",
             "console": "integratedTerminal",
@@ -26,7 +26,7 @@
         },
         {
             "name": "Execute experiment",
-            "type": "python",
+            "type": "debugpy",
             "request": "launch",
             "program": "execute_experiment.py",
             "console": "integratedTerminal",
