--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 requires-python = ">=3.12.0"
 dependencies = [
     "fire",
+    "huggingface",
     "loguru",
     "pandas",
     "timm",
@@ -90,7 +91,7 @@ line-length = 120
 indent-width = 4
 
 # Assume Python 3.9
-target-version = "py39"
+target-version = "py312"
 
 [tool.ruff.lint]
 # Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
@@ -110,7 +111,7 @@ select = [
     # isort
     "I",
 ]
-ignore = []
+ignore = ["F403", "F405"]
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
 fixable = ["ALL"]
